Move dot calibration settings into config

--- a/example_config.ini
+++ b/example_config.ini
@@ -9,4 +9,6 @@ y_score_exponent = 10
 z_score_exponent = 10
 circle_margin = 20
 circle_radius = 20
+dot_result_back_look = 10
+dot_result_successes_requirement = 7
 
