--- a/example_config.ini
+++ b/example_config.ini
@@ -11,4 +11,6 @@ circle_margin = 20
 circle_radius = 20
 dot_result_back_look = 10
 dot_result_successes_requirement = 7
+erase_background = False
+fps = 60
 
